--- a/free-nodes/index.htm
+++ b/free-nodes/index.htm
@@ -79,6 +79,19 @@
                 <div class="row">
                     <div class="col-md-9">
                         <div class="xcblog-blog-list">
+                                                        <div class="row item xcblog-blog-item" data-date="2024-12-26">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2024-12-26-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/1fd790c0c842e87fd7fc3b1714ac6d9d.webp" alt="「12月26日」最高速度20.9M/S，2024年V2ray/Shadowrocket/SSR/Clash每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2024-12-26-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「12月26日」最高速度20.9M/S，2024年V2ray/Shadowrocket/SSR/Clash每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了欧洲、韩国、加拿大、日本、新加坡、香港、美国等地区,最高速度可达20.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
                                                         <div class="row item xcblog-blog-item" data-date="2024-12-25">
                                 <div class="col-md-3">
                                     <a href="/free-nodes/2024-12-25-free-node-subscribe.htm" class="xcblog-blog-url">
@@ -196,19 +209,6 @@
                                     <p>这一次的节点更新覆盖了韩国、香港、新加坡、美国、欧洲、日本、加拿大等地区,最高速度可达19.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
                                 </div>
                             </div>
-                                                        <div class="row item xcblog-blog-item" data-date="2024-12-16">
-                                <div class="col-md-3">
-                                    <a href="/free-nodes/2024-12-16-free-v2ray-subscribe.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/fc8c592510f04d04d9f99cdf3ce8408d.webp" alt="「12月16日」最高速度18.1M/S，2024年Shadowrocket/Clash/V2ray/SSR每天更新免费节点订阅链接" class="img-fluid rounded">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/free-nodes/2024-12-16-free-v2ray-subscribe.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">「12月16日」最高速度18.1M/S，2024年Shadowrocket/Clash/V2ray/SSR每天更新免费节点订阅链接</h3>
-                                    </a>
-                                    <p>这一次的节点更新覆盖了美国、新加坡、韩国、加拿大、香港、日本、欧洲等地区,最高速度可达18.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                                </div>
-                            </div>
                             
                             <ul class="pagination"><li class="disabled"><span>&laquo;</span></li> <li class="active"><span>1</span></li><li><a href="/free-nodes/page-2.htm">2</a></li><li><a href="/free-nodes/page-3.htm">3</a></li><li><a href="/free-nodes/page-4.htm">4</a></li><li><a href="/free-nodes/page-5.htm">5</a></li><li><a href="/free-nodes/page-6.htm">6</a></li><li><a href="/free-nodes/page-7.htm">7</a></li><li><a href="/free-nodes/page-8.htm">8</a></li><li class="disabled"><span>...</span></li><li><a href="/free-nodes/page-13.htm">13</a></li><li><a href="/free-nodes/page-14.htm">14</a></li> <li><a href="/free-nodes/page-2.htm">&raquo;</a></li></ul>                        </div>
                     </div>
@@ -219,16 +219,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2"><a href="/free-nodes/2024-11-24-clash-v2ray-ss-ssr.htm" title="「11月24日」最高速度20.1M/S，2024年Clash/SSR/Shadowrocket/V2ray每天更新免费节点订阅链接">「11月24日」最高速度20.1M/S，2024年Clash/SSR/Shadowrocket/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-12-3-free-v2ray.htm" title="「12月3日」最高速度21.3M/S，2024年Clash/SSR/Shadowrocket/V2ray每天更新免费节点订阅链接">「12月3日」最高速度21.3M/S，2024年Clash/SSR/Shadowrocket/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-9-8-node-share.htm" title="「9月8日」最高速度21.2M/S，2024年Clash/SSR/Shadowrocket/V2ray每天更新免费节点订阅链接">「9月8日」最高速度21.2M/S，2024年Clash/SSR/Shadowrocket/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-12-1-free-node-subscribe.htm" title="「12月1日」最高速度22.9M/S，2024年SSR/Clash/Shadowrocket/V2ray每天更新免费节点订阅链接">「12月1日」最高速度22.9M/S，2024年SSR/Clash/Shadowrocket/V2ray每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2024-11-15-node-share.htm" title="「11月15日」最高速度19.6M/S，2024年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接">「11月15日」最高速度19.6M/S，2024年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-11-21-free-subscribe-node.htm" title="「11月21日」最高速度18.6M/S，2024年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接">「11月21日」最高速度18.6M/S，2024年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/news/article-23890.htm" title="广州市宠物领养（广州宠物领养公众号）">广州市宠物领养（广州宠物领养公众号）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-11-16-node-share-links.htm" title="「11月16日」最高速度19.9M/S，2024年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接">「11月16日」最高速度19.9M/S，2024年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-9-2-node-share-links.htm" title="「9月2日」最高速度20.6M/S，2024年Shadowrocket/SSR/V2ray/Clash每天更新免费节点订阅链接">「9月2日」最高速度20.6M/S，2024年Shadowrocket/SSR/V2ray/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-12-free-v2ray.htm" title="「10月12日」最高速度20.6M/S，2024年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接">「10月12日」最高速度20.6M/S，2024年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-20-free-high-speed-nodes.htm" title="「8月20日」最高速度18.2M/S，2024年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接">「8月20日」最高速度18.2M/S，2024年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-21-free-node-subscribe-links.htm" title="「10月21日」最高速度21.9M/S，2024年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接">「10月21日」最高速度21.9M/S，2024年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/news/article-30900.htm" title="芭比堂宠物医院价格表（芭比堂宠物医院百度百科）">芭比堂宠物医院价格表（芭比堂宠物医院百度百科）</a></li>
-                        <li class="py-2"><a href="/news/article-25745.htm" title="附近领养狗狗在哪里 附近领养狗狗在哪里">附近领养狗狗在哪里 附近领养狗狗在哪里</a></li>
+                        <li class="py-2"><a href="/news/article-24821.htm" title="被猫抓不用***的图片（孩子10几天后才说被猫咬了）">被猫抓不用***的图片（孩子10几天后才说被猫咬了）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-11-13-free-subscribe-node.htm" title="「11月13日」最高速度19M/S，2024年Shadowrocket/Clash/V2ray/SSR每天更新免费节点订阅链接">「11月13日」最高速度19M/S，2024年Shadowrocket/Clash/V2ray/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-28996.htm" title="在C ++ STL中列出swap()">在C ++ STL中列出swap()</a></li>
+                        <li class="py-2"><a href="/news/article-26193.htm" title="宠物粮市场规模（中国宠物粮市场）">宠物粮市场规模（中国宠物粮市场）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-25-free-node-subscribe-links.htm" title="「8月25日」最高速度20.5M/S，2024年SSR/Clash/Shadowrocket/V2ray每天更新免费节点订阅链接">「8月25日」最高速度20.5M/S，2024年SSR/Clash/Shadowrocket/V2ray每天更新免费节点订阅链接</a></li>
                     </ul>
     </div>
 </div>
@@ -240,7 +240,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">75</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
+                <h4><span class="badge" style="float: right;">78</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">34</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
